tests/tests_p1/fail/prof/39noinit.min
program
	array n[10] :=
start
	n[0]! "\n"!
end
